# eru

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: CMakeLists.txt  downloader.cpp  downloader.h  main.cpp
